tests/ui/associated-inherent-types/style.stderr
error: associated type `typ` should have an upper camel case name
  --> $DIR/style.rs:8:10
   |
LL |     type typ = ();
   |          ^^^ help: convert the identifier to upper camel case: `Typ`
   |
note: the lint level is defined here
  --> $DIR/style.rs:3:9
   |
LL | #![deny(non_camel_case_types)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

